@@ -1,5 +1,9 @@
 [b]Version 0.6.2[/b]:
 
+(2008-07-09)
+ * Now the initialization of the audio track should work ok again, even if
+   the option "Fast audio track switching" is set to "No".
+
 (2008-07-08)
  * Added a context menu in the find subtitles dialog, with two options:
    "download" and "copy link to clipboard".
